src/image/style.scss
@import "../common/colors.css";

$image-x-small-width: 16% !important;
$image-small-width: 25% !important;
$image-medium-width: 33% !important;
$image-large-width: 50% !important;
$image-x-large-width: 100% !important;

.block-editor-block-list__layout {
  .wp-block-coliquio-image {
    margin: 15px 0;

    &.align-left {
      float: left;
      margin-right: 15px;
    }
    &.align-right {
      float: right;
      margin-left: 15px;
    }
    &.align-center {
      text-align: center;
    }

    img {
      float: none;
      max-width: 400px;
      width: 100%;
    }

    figcaption {
      color: var(--black-base);
      line-height: 1.4rem;
      margin: 0;
      padding: 5px 0 0;
    }

    .copyright {
      color: var(--black-lighten-50);
      display: block;
      font-size: 0.8rem;
    }
  }

  .wp-block-image {
    min-width: 140px;

    &.custom-size-extra-small {
      width: $image-x-small-width;
    }
    &.custom-size-small {
      width: $image-small-width;
    }
    &.custom-size-medium {
      width: $image-medium-width;
    }
    &.custom-size-large {
      width: $image-large-width;
    }
    &.custom-size-extra-large {
      width: $image-x-large-width;
    }
    .components-resizable-box__container {
      width: $image-x-large-width;
      img {
        float: none;
        width: $image-x-large-width;
      }
      .components-resizable-box__handle {
        display: none;
      }
    }
    .components-text-control__input {
      border: none !important;
      box-shadow: none !important;
      text-align: center;
    }
  }

  // there is js logic adding this class based on innerHtml of the buttons(text)
  .custom-hidden {
    display: none;
  }

  // hide upload button from popup menu
  .components-form-file-upload {
    display: none;
  }

  .wp-block[data-align="left"] > .wp-block-image {
    margin-right: 2.5em;
  }
  figure.wp-block-image {
    &.custom-size-extra-small {
      width: 116px !important;
    }
    &.custom-size-small {
      width: 180px !important;
    }
    &.custom-size-medium {
      width: 240px !important;
    }
    &.custom-size-large {
      width: 360px !important;
    }
    &.custom-size-extra-large {
      width: 720px !important;
    }
  }

  .components-disabled {
    opacity: 0.7;
  }

  .block-editor-block-list__layout {
    .layout-column-left-small {
      margin-left: 196px;
      margin-right: 0;
    }
    .layout-column-right-small {
      margin-left: 0;
      margin-right: 196px;
    }
  }
}

// context menu in editor
.block-editor-block-toolbar .media-replace-flow {
  display: none !important;
}

.block-editor-image-size-control .block-editor-image-size-control__row {
  display: none;
}

article {
  .wp-block-image {
    min-width: 140px;

    figure.alignleft,
    figure.alignright {
      figcaption {
        display: block;
        width: 100%;
      }
    }
    img {
      display: block;
      margin: 0 auto;
    }

    &.custom-size-extra-small {
      .alignright,
      .alignleft {
        width: $image-x-small-width;
      }
      & > img {
        width: $image-x-small-width;
      }
    }
    &.custom-size-small {
      .alignright,
      .alignleft {
        width: $image-small-width;
      }
      & > img {
        width: $image-small-width;
      }
    }
    &.custom-size-medium {
      .alignright,
      .alignleft {
        width: $image-medium-width;
      }
      & > img {
        width: $image-medium-width;
      }
    }
    &.custom-size-large {
      .alignright,
      .alignleft {
        width: $image-large-width;
      }
      & > img {
        width: $image-x-small-width;
      }
    }
    &.custom-size-extra-large {
      .alignright,
      .alignleft {
        width: $image-x-large-width;
      }
      & > img {
        width: $image-x-large-width;
      }
    }
    .components-resizable-box__container {
      width: $image-x-large-width;
      img {
        float: none;
        width: $image-x-large-width;
      }
      .components-resizable-box__handle {
        display: none;
      }
    }
    .components-text-control__input {
      border: none !important;
      box-shadow: none !important;
      text-align: center;
    }
  }
  .wp-block-image {
    .alignright {
      display: block;
      float: right;
    }

    .alignleft {
      display: block;
      float: left;
    }
  }
}

